Updated package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "razorcreations/tanda",
+    "name": "razorcreations/tanda-php",
     "type": "library",
     "license": "MIT",
     "authors": [
